tests/negative/neg_pr118e_mutual_recursion.safe
-- Test: neg_pr118e_mutual_recursion
-- Description: Mutually recursive record families are deferred to PR11.8e.1.
--   Two record types that reference each other are rejected in PR11.8e.
-- Expected: REJECT unsupported_source_construct

package neg_pr118e_mutual_recursion

   type a;
   type b;

   type a is record
      next : b;

   type b is record
      prev : a;
